message(STATUS "Adding task-graph examples")

include(FindOpenMP)

function(add_task_graph_examples DIR)
    file(GLOB TASKGRAPH_EXAMPLES  "${DIR}/*.c" "${DIR}/*.cpp" "${DIR}/*.f90" "${DIR}/*.F90")
    foreach(SRCFILE ${TASKGRAPH_EXAMPLES})
        cmake_path(GET SRCFILE STEM EX_NAME)
        message(STATUS "Adding task-graph example: ${EX_NAME}")
        add_executable(${EX_NAME} ${SRCFILE})
        target_include_directories(${EX_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include)
        target_link_libraries(${EX_NAME} otter-task-graph)
        if(SRCFILE MATCHES "omp-+")
            message("Found OpenMP task-graph example: ${SRCFILE}")
            target_compile_options(${EX_NAME} PUBLIC "${OpenMP_C_FLAGS}")
            target_link_options(${EX_NAME} PUBLIC "${OpenMP_C_FLAGS}")
        else()
            message("Found task-graph example: ${SRCFILE}")
        endif()
        install(TARGETS ${EX_NAME})
    endforeach()
endfunction()

add_task_graph_examples(${CMAKE_CURRENT_SOURCE_DIR})
